Updated register button with show related table data

--- a/src/app/eventtable/eventtable.component.html
+++ b/src/app/eventtable/eventtable.component.html
@@ -113,7 +113,7 @@
               class="btn btn-danger mt-2 float-end"
               colspan="5"
               (click)="showRegister()"
-              [disabled]="totalTickets > 0 ? false : true"
+              [disabled]="totalTicketsTwo > 0 ? false : true"
               style="margin-right: 50%"
             >
               Register
