Updated code for Login navbar If user is in event-detail page then redirect to event after loggedIn

--- a/src/app/eventdet/eventdet.component.html
+++ b/src/app/eventdet/eventdet.component.html
@@ -1,4 +1,10 @@
-<button class="btn btn-primary" (click)="onLogIn()">LogIn</button>
+<!-- <button *ngIf="!checkLoggedIn" class="btn btn-primary" (click)="onLogIn()">
+  LogIn
+</button>
+<button *ngIf="checkLoggedIn" class="btn btn-primary" (click)="onLogIn()">
+  Logout
+</button> -->
+
 <div
   *ngIf="eventDetailData"
   class="row mt-5"
