--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-
+<button *ngIf="!checkLoggedIn" class="btn btn-primary" (click)="onLogIn()">
+  LogIn
+</button>
+<button *ngIf="checkLoggedIn" class="btn btn-primary" (click)="onLogout()">
+  Logout
+</button>
 <router-outlet></router-outlet>
