Updated register component For Formly Fiedls1 regenerate based on condition

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 <button *ngIf="checkLoggedIn" class="btn btn-primary" (click)="onLogout()">
   Logout
 </button>
+
+<button class="btn btn-secondary" routerLink="sign-up">Sign Up</button>
 <router-outlet></router-outlet>
