--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <button *ngIf="!checkLoggedIn" class="btn btn-primary" (click)="onLogIn()">
   LogIn
 </button>
+<label *ngIf="checkLoggedIn"> {{ getUserName() }} </label>
 <button *ngIf="checkLoggedIn" class="btn btn-primary" (click)="onLogout()">
   Logout
 </button>
